--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="build/css/_variables.css">
+        <link rel="stylesheet" href="">
     </head>
 
     <body>
         <style>
             button {
-                background-color: var( --primary-gray-semantic-background-primary-gray-bg-0);
-                color: var(--primary-gray-semantic-foreground-primary-gray-fg-1);
+                background-color: black;
+                color: white;
             }
         </style>
         <button>Hello</button>
