--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="build/css/_variables.css">
     </head>
 
     <body>
         <style>
             button {
-                background-color: black;
-                color: white;
+                background-color: var(--button-bg);
+                color: var(--button-fg);
             }
         </style>
         <button>Hello</button>
